# fpl

./: .gitignore  .streamlit  README.md  pyproject.toml  requirements.txt
notebooks/: fbref.ipynb  fpl.ipynb  plots.ipynb
scrapper/: scrap.py  scrap2.py
src/: app.py  players.py  streamlit_app.py
src/pages/: teams.py
src/streamlit pages/: main.py
