[tool.poetry]
name = "fpl"
version = "0.1.0"
description = ""
authors = ["Muminsho Abdulvasiev <muminshoam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
requests = "^2.32.3"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
streamlit = "^1.40.1"
plottable = "^0.1.5"
selenium = "^4.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
